--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "@celo/contractkit": "^2.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
