--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@celo/contractkit": "^2.0.0",
+    "axios": "^0.27.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -33,6 +34,7 @@
     "express-validator": "^6.14.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.6",
     "web3": "^1.7.3",
     "xss-clean": "^0.1.1"
