--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
+    "react-toastify": "^9.0.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
